demos/02_pipelines_typo3/k8s/1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: typo3-application
  namespace: pipelines-demo
  labels:
    app: typo3-application
    cms: typo3
spec:
  containers:
    - image: mariadb:latest
      name: typo3-db
    - image: martinhelmich/typo3:11.0
      name: typo3-web
      imagePullPolicy: Always
      ports:
        - containerPort: 80
