demos/02_pipelines_typo3/k8s/2_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: typo3-application
  name: typo3-application
spec:
  type: ClusterIP
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: typo3-application
