demos/02_pipelines_typo3/k8s/3_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: typo3-application
  namespace: pipelines-typo3
  labels:
    app: typo3-application

spec:
  path: /
  to:
    kind: Service
    name: typo3-application
  port:
    targetPort: 80-tcp
